cmake_minimum_required(VERSION   2.8)
project(bingo)
set(CMAKE_CXX_FLAGS " -std=c++11 ${CMAKE_CXX_FLAGS}")
include_directories("./include")
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.49)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  add_executable(bingo_simulator bingo_simulator.cxx)
  target_link_libraries(bingo_simulator ${Boost_LIBRARIES})
endif()

