cmake_minimum_required(VERSION 2.8)
project(bingo)
set(CMAKE_CXX_FLAGS " -std=c++11 -Wall -O2 -d -I${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CXX_FLAGS}")
#set(CMAKE_INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_INCLUDE_PATH}")
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.49)
if(Boost_FOUND)
  #set(CMAKE_INCLUDE_PATH "${Boost_INCLUDE_DIRS} ${CMAKE_INCLUDE_PATH}")
  include_directories(${Boost_INCLUDE_DIRS})
  add_executable(bingo_simulator bingo_simulator.cxx)
  target_link_libraries(bingo_simulator ${Boost_LIBRARIES})
  add_executable(bingo_battler bingo_battler.cxx)
  target_link_libraries(bingo_battler ${Boost_LIBRARIES} glog)
endif()

